html structure of page2/page3 is created

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                 <li><a href="#">Hotels & Homes</a></li>
                 <li><a href="#">Most Populars</a></li>
                 <li><a href="#">Top Destinations</a></li>
-                <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
+                <li><a href="#">About</a></li>
             </ul>
         </div>
 
@@ -31,7 +31,6 @@
         <div class="parts">
             <div class="text">
                 <h1 class="booking">Book your accommodation in advance</h1>
-                <h1 class="feel">FEEL LIKE HOME</h1>
                 <p>This website was created to fulfill Web Technology module’s
                     requirements and does not represent an actual company or service</p>
             </div>
@@ -46,6 +45,45 @@
         </div>
 
     </section>
-    
+
+    <section class="page2">
+        <div class="page2-parts">
+            <div class="page2-text">
+                <h1>Most Populars</h1>
+                <h1 class="feel">FEEL LIKE HOME</h1>
+            </div>
+
+            <div class="page2-images">
+                <img src="assets/images/popular1.jpg" alt="">
+                <img src="assets/images/popular2.jpg" alt="">
+                <img src="assets/images/popular3.jpeg" alt="">
+                <img src="assets/images/popular4.jpg" alt="">
+            </div>
+        </div>
+
+    </section>
+
+    <section class="page3">
+        <div class="page3-parts">
+            <div class="page3-text">
+                <h1>Top Destinations</h1>
+                <h1 class="feel">Travel all around the world</h1>
+            </div>
+
+            <div class="page3-images1">
+                <img src="assets/images/places/bali.jpg" alt="">
+                <img src="assets/images/places/sydney.jpg" alt="">
+                <img src="assets/images/places/antalya.jpg" alt="">
+            </div>
+
+            <div class="page3-images2">
+                <img src="assets/images/places/new_york.jpg" alt="">
+                <img src="assets/images/places/maldives.jpg" alt="">
+                <img src="assets/images/places/dubai.jpeg" alt="">
+            </div>
+
+        </div>
+    </section>
+
 </body>
 </html>
