page2 styling is done

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <title>Document</title>
     <link rel="stylesheet" href="style/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,600&display=swap" rel="stylesheet">
 </head>
 <body>
     <section class="page1">
@@ -49,6 +52,12 @@
             <img src="assets/images/popular2.jpg" alt="" class="popular2">
             <img src="assets/images/popular3.jpeg" alt="" class="popular3">
             <img src="assets/images/popular4.jpg" alt="" class="popular4">
+        </div>
+
+        <div class="page2-images-text">
+            <p>Taj Dubai - Dubai, UAE</p>
+            <p>The Modern Honolulu - Hawaii, USA</p>
+            <p>Dusit Thani - Abu Dhabi, UAE</p>
         </div>
 
     </section>
