page 3 style is done

--- a/index.html
+++ b/index.html
@@ -63,25 +63,34 @@
     </section>
 
     <section class="page3">
-        <div class="page3-parts">
-            <div class="page3-text">
-                <h1>Top Destinations</h1>
-                <h1 class="feel">Travel all around the world</h1>
-            </div>
-
-            <div class="page3-images1">
-                <img src="assets/images/places/bali.jpg" alt="">
-                <img src="assets/images/places/sydney.jpg" alt="">
-                <img src="assets/images/places/antalya.jpg" alt="">
-            </div>
-
-            <div class="page3-images2">
-                <img src="assets/images/places/new_york.jpg" alt="">
-                <img src="assets/images/places/maldives.jpg" alt="">
-                <img src="assets/images/places/dubai.jpeg" alt="">
-            </div>
-
+        <div class="page3-text">
+            <h1 class="feel">Travel all around the world</h1>
         </div>
+
+        <div class="page3-images1">
+            <img src="assets/images/places/bali.jpg" alt="">
+            <img src="assets/images/places/sydney.jpg" alt="">
+            <img src="assets/images/places/antalya.jpg" alt="">
+        </div>
+
+        <div class="page3-images1-text">
+            <h3>Bali, Indonesia</h3>
+            <h3>Sydney, Australia</h3>
+            <h3>Antalya, Turkey</h3>
+        </div>
+
+        <div class="page3-images2">
+            <img src="assets/images/places/new_york.jpg" alt="">
+            <img src="assets/images/places/maldives.jpg" alt="">
+            <img src="assets/images/places/dubai.jpeg" alt="">
+        </div>
+
+        <div class="page3-images2-text">
+            <h3>New York, USA</h3>
+            <h3>Maldives, Republic of Maldives</h3>
+            <h3>Dubai, UAE</h3>
+        </div>
+
     </section>
 
     <section class="page4">
