css style of page 4 is almost ready

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <nav class="nav-bar">
             <div class="links">
                 <ul class="ul-links">
+                    <li><a href="#">Home</a></li>
                     <li><a href="#">Hotels</a></li>
-                    <li><a href="#">Homes</a></li>
-                    <li><a href="#">Most Populars</a></li>
                     <li><a href="#">Top Destinations</a></li>
-                    <li><a href="#">Reserve</a></li>
+                    <li><a href="#">Most Populars</a></li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
             </div>
     
@@ -95,13 +95,26 @@
 
     <section class="page4">
         <div class="page4-text">
+            <h1>The most popular hotels ranked so far</h1>
+        </div>
+
+        <div class="page4-images">
+            <img src="assets/images/hotels/mardan-palace.jpg" alt="">
+            <img src="assets/images/hotels/burj-al-arab.jpg" alt="">
+            <img src="assets/images/hotels/atlantis-bahamas.jpg" alt="">
+            <img src="assets/images/hotels/plaza.jpg" alt="">
+        </div>
+    </section>
+
+    <section class="page5">
+        <div class="page5-text">
             <p>
                 Do you have any question or problem regarding our service.
                 Fill the form below so that we will contact you
             </p>
         </div>
 
-        <div class="page4-form">
+        <div class="page5-form">
             <form action="">
                 <input type="email" placeholder="Email">
                 <input type="text" placeholder="comment">
@@ -110,15 +123,15 @@
         </div>
     </section>
 
-    <section class="page5">
-        <div class="page5-text">
+    <section class="page6">
+        <div class="page6-text">
             <p> 
                 Save time, save money!
                 Sign up and we'll send the best deals to you
             </p>
         </div>
 
-        <div class="page5-form">
+        <div class="page6-form">
             <form action="">
                 <input type="text" placeholder="First Name">
                 <input type="text" placeholder="Last Name">
@@ -128,12 +141,12 @@
         </div>
     </section>
 
-    <section class="page6">
-        <div class="page6-text1">
+    <section class="footer">
+        <div class="footer-text1">
             <h1>WHO WE ARE</h1>
         </div>
 
-        <div class="page6-text2">
+        <div class="footer-text2">
             <p>Our Address</p>
             <p>4214 Harron Drive, Baltimore, MaryLand</p>
             <p>Zip Code</p>
