css style of page 5 is done

--- a/index.html
+++ b/index.html
@@ -108,17 +108,14 @@
 
     <section class="page5">
         <div class="page5-text">
-            <p>
-                Do you have any question or problem regarding our service.
-                Fill the form below so that we will contact you
-            </p>
+            <h1>Fill the form below to contact with us</h1>
         </div>
 
         <div class="page5-form">
             <form action="">
-                <input type="email" placeholder="Email">
-                <input type="text" placeholder="comment">
-                <button type="submit">Send</button>
+                <input type="email" placeholder="Email" class="page5-email">
+                <input type="text" placeholder="comment" class="page5-comment">
+                <button type="submit" class="page5-send">Send</button>
             </form>
         </div>
     </section>
