page 6 style is done

--- a/index.html
+++ b/index.html
@@ -122,18 +122,18 @@
 
     <section class="page6">
         <div class="page6-text">
-            <p> 
+            <h1> 
                 Save time, save money!
                 Sign up and we'll send the best deals to you
-            </p>
+            </h1>
         </div>
 
         <div class="page6-form">
             <form action="">
-                <input type="text" placeholder="First Name">
-                <input type="text" placeholder="Last Name">
-                <input type="email" placeholder="Email">
-                <button type="submit">Sign Up</button>
+                <input type="text" placeholder="First Name" class="page6-firstname">
+                <input type="text" placeholder="Last Name" class="page6-lastname">
+                <input type="email" placeholder="Email" class="page6-email">
+                <button type="submit" class="page6-signup">Sign Up</button>
             </form>
         </div>
     </section>
