the last changes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-
+        <!-- Nav bar section of website -->
         <div id="menu-bar" class="fas fa-bars"></div>
 
         <a href="#" class="logo"><span>T</span>oursist</a>
@@ -40,9 +40,9 @@
     </header>
 
 
+    <!-- Home page -->
     <section class="home" id="home">
-        <!-- Page Number 1 -->
-    
+
             <div class="auth-buttons">
                 <a href="#signup" class="btn" type="button">Sign Up</a>
                 <button class="btn register"  type="button">Sign in</button>
@@ -54,6 +54,7 @@
                 <h1 class="booking-text">Book your accommodation in advance</h1>
             </div>
 
+            <!-- Search Form -->
             <form class="home-form">
                 <input type="search" placeholder="Where are you going?" class="place" id="place">
                 <input type="date" placeholder="arrive in -- leave in" class="date" id="date">
@@ -66,6 +67,7 @@
         </div>
     </section>
 
+    <!-- Hotels page -->
     <section class="hotels" id="hotels">
         <div class="hotels-text">
             <h1 class="feel">FEEL LIKE HOME</h1>
@@ -85,6 +87,7 @@
 
     </section>
 
+    <!-- Top Destinations page -->
     <section class="top_destinations" id="top_destinations">
         <div class="top_destinations-text">
             <h1 class="feel">Travel all around the world</h1>
@@ -116,13 +119,14 @@
 
     </section>
 
+    <!-- Page where most populars hotels are -->
     <section class="most_populars" id="most_populars">
         <div class="most_populars-text">
             <h1>The most popular hotels ranked so far</h1>
         </div>
 
         <div class="box-container">
-            
+            <!-- Hotel Number 1 -->
             <div class="box">
                 <img src="assets/images/hotels/mardan-palace.jpg" alt="">
                 <div class="hotel-info">
@@ -140,6 +144,7 @@
                     a repudiandae. Reiciendis doloribus corrupti optio quis blanditiis quidem ex! Molestiae quos amet sed commodi!
                 </p>
             </div>
+            <!-- Hotel Number 2 -->
             <div class="box">
                 <img src="assets/images/hotels/atlantis-bahamas.jpg" alt="">
                 <div class="hotel-info">
@@ -157,6 +162,7 @@
                     a repudiandae. Reiciendis doloribus corrupti optio quis blanditiis quidem ex! Molestiae quos amet sed commodi!
                 </p>
             </div>
+            <!-- Hotel Number 3 -->
             <div class="box">
                 <img src="assets/images/hotels/burj-al-arab.jpg" alt="">
                 <div class="hotel-info">
@@ -174,6 +180,7 @@
                     a repudiandae. Reiciendis doloribus corrupti optio quis blanditiis quidem ex! Molestiae quos amet sed commodi!
                 </p>
             </div>
+            <!-- Hotel Number 4 -->
             <div class="box">
                 <img src="assets/images/hotels/plaza.jpg" alt="">
                 <div class="hotel-info">
@@ -195,6 +202,7 @@
         </div>
     </section>
 
+    <!-- Contact page -->
     <section class="contact" id="contact">
         <div class="contact-text">
             <h1>Fill the form below to contact with us</h1>
@@ -209,6 +217,7 @@
         </div>
     </section>
 
+    <!-- Sign Up page -->
     <section class="signup" id="signup">
         <div class="signup-text">
             <h1> 
@@ -227,6 +236,7 @@
         </div>
     </section>
 
+    <!-- Footer section -->
     <section class="footer">
         <div class="footer-text1">
             <h1>WHO WE ARE</h1>
